--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "aos": "^2.3.4",
     "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
+    "lucide-react": "^0.554.0",
     "ogl": "^1.0.11",
     "react": "^19.1.1",
     "react-countup": "^6.5.3",
